2000-08-15  Peter Williams  <peterw@helixcode.com>

	* mail-ops.c (transfer_messages): Generalize move_messages into
	transfer_messages so that we can copy too.

	* mail-ops.h: Prototype the new mail_do_transfer_messages.

	* folder-browser-factory.c: Add a UI hook for copy_msg.

	* mail-callbacks.c (transfer_msg): Generalize move so that it supports
	copy as well, and add a callback 'copy_msg'.

	* message-list.c (on_right_click): Add a right-click hook for Copy Message.

	* session.c (mail_request_dialog): Don't deadlock when in main thread.
	
2000-08-14  Peter Williams  <peterw@helixcode.com>

	* mail-threads.c (show_error): Fix the error dialogs.
	(read_msg): Re-enable them.

	* mail-ops.c (do_scan_subfolders): Silence a compile warning.

2000-08-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-crypto.c (mail_crypto_openpgp_encrypt): Added support for
	encrypting via PGP 5.0

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (cleanup_create_folder): Release the listener object
	with `CORBA_Object_release()', not `CORBA_free()'.

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* main.c (main): Set the signal handlers for `SIGSEGV' and
	`SIGBUS' to the default ones.

2000-08-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (mail_config_write): Set config->configured to
	TRUE

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-config-gui.c (mail_config_druid): Don't
	`GDK_THREADS_ENTER()'/`GDK_THREADS_LEAVE()'.

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-threads.c (update_active_views): Just iterate through all
	the controls, not just the active ones.

	* folder-browser-factory.c: Don't keep track of active controls.
	Rather, keep track of all of them.
	(folder_browser_factory_get_active_control_list): Removed.
	(folder_browser_factory_get_control_list): New.

2000-08-13  Dan Winship  <danw@helixcode.com>

	* Makefile.am (evolution_mail_SOURCES): add mail-local.h
